--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-table": "^8.21.2",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.2",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
